# switch_script

./: conf.csv  main.py  pyproject.toml
output/main/: conf.csv  login_issues.csv
